update css: took out border, fixed spacing, changed bg-color, and buttons

--- a/client-frontend/src/App.css
+++ b/client-frontend/src/App.css
@@ -1,24 +1,28 @@
+
+
 .grandparentContainer{
   display: flex;
-  background-color: rgba(135,206,250,1);
-  border: 5px solid green;
+  background-color: #fddf5c;
+  /* border: 5px solid green; */
+  background-image: url("https://unsplash.com/photos/rwF_pJRWhAI");
+  background-repeat: no-repeat;
 }
 
 .parentContainer{
   display: flex;
   flex-direction: column;
-  background-color: #E8A87C;
+  background-color: #e49c34;
   color: white;
-  padding: 100px 50px;
-  text-align: center;
+  padding: 250px 0;
   flex: 1;
   height: 100vh;
-  width: 500px;
+  width: 25vw;
   font-family: 'Roboto', sans-serif;
-  font-size: 32pt;
+  font-size: 24pt;
   justify-content: space-evenly;
   align-items: center;
-  border: 2px solid black;
+  /* border: 2px solid black; */
+  letter-spacing: 1.3px;
 }
 
 .childWrapper{
@@ -26,7 +30,7 @@
   justify-content: space-evenly;
   align-items: center;
   align-content: center;
-  border: solid 3px red;
+  /* border: solid 3px red; */
   flex: 1;
 }
 
@@ -36,7 +40,7 @@
   text-align: center;
   height: 50vh;
   width: 50vw;
-  border: solid 3px black;
+  /* border: solid 3px black; */
   background-color: #00CC99;
   font-family: 'Lato', sans-serif;
   align-items: center;
@@ -49,14 +53,14 @@
   text-align: center;
   height: 50vh;
   width: 50vw;
-  border: solid 3px black;
-  background-color: #00CC99;
+  /* border: solid 3px black; */
+  /* background-color: #00CC99; */
   font-family: 'Lato', sans-serif;
   font-size: 20pt;
 }
 
 .filterButtons{
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
   display: flex;
   flex-direction: row;
 }
@@ -72,7 +76,7 @@
   display: inline-flex;
   flex-direction: row;
   align-content: space-between;
-  border: 3px solid blue;
+  /* border: 3px solid blue; */
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -88,18 +92,21 @@
 
 .filterButtons button{
   height: 5vh;
-  width: 7vw;
+  width: 12vw;
   font-size: 14pt;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .filterItems button{
-  height: 6vh;
-  width: 9vw;
+  height: 7vh;
+  width: 18vw;
   font-size: 10pt;
-  border-radius: 50%;
+
 }
 
+.filterButtonSpace{
+  padding: 5px 10px;
+}
 
 /* CSS for UserIndex Page */
 
@@ -108,15 +115,17 @@
   text-align: center;
   height: 50vh;
   width: 50vw;
-  border: solid 3px black;
+  /* border: solid 3px black; */
   background-color: #00CC99;
   font-family: 'Lato', sans-serif;
   font-size: 20pt;
+  padding: 10px;
 }
 
 .userIndexTitle{
   text-align: center;
-  border: 1px solid black;
+  padding-bottom: 40px;
+
 }
 
 .userIndexWrapper{
@@ -129,8 +138,10 @@
 .userIndex{
   display: flex;
   flex-direction: column;
-  border: solid 1px blue;
+  /* border: solid 1px blue; */
   width: 15vw;
+  font-size: 22px;
+  padding: 5px 10px;
 }
 
 
@@ -138,12 +149,23 @@
 
 .childEditUserInfoContainer{
   text-align: center;
-  height: 50vh;
+  height: 60vh;
   width: 50vw;
-  border: solid 3px black;
+  /* border: solid 3px black; */
   background-color: #00CC99;
   font-family: 'Lato', sans-serif;
-  font-size: 20pt;
+  font-size: 15pt;
+  line-height: 22px;
+  padding: 20px;
+}
+
+.childEditParagraph{
+  margin-bottom: 20px;
+}
+
+.childEditSubmit{
+  width: 200px;
+  height: 10px;
 }
 
 .editInterestWrapper{
@@ -157,17 +179,21 @@
   font-size: 12pt;
   display: flex;
   flex-direction: row;
-  border: solid 1px solid;
+  /* border: solid 1px solid; */
+  padding:0 10px 10px 10px;
 }
 
+.editButtonSpace{
+  padding-left: 5px;
+}
 
 /* CSS for Interests Page */
 
 .childInterestContainer{
   text-align: center;
-  height: 50vh;
+  height: 60vh;
   width: 50vw;
-  border: solid 3px black;
+  /* border: solid 3px black; */
   background-color: #00CC99;
   font-family: 'Lato', sans-serif;
   font-size: 20pt;
@@ -183,7 +209,7 @@
   font-size: 12pt;
   display: flex;
   flex-direction: row;
-  border: solid 1px solid;
+  /* border: solid 1px solid; */
 }
 
 button:hover{
